karmada-demo/device_plugin_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-plugin-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-plugin-2
  template:
    metadata:
      labels:
        app: device-plugin-2
    spec:
      containers:
        - name: device-plugin-2
          image: busybox
          command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
          resources:
            limits:
              cpu: 2500m
              memory: 100Mi
