karmada-demo/nginx-label-selector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ""
  labels:
    app: nginx
    region: cn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          resources:
            limits:
              cpu: 25m
              memory: 64Mi
